Prep spring shell v4